Bug 1563256, horizontal scrolling on mobile view

--- a/kuma/static/styles/components/wiki/spec.scss
+++ b/kuma/static/styles/components/wiki/spec.scss
@@ -23,6 +23,7 @@ Colors and Badges for the Spec2 macro template
 .spec-REC,
 .spec-RFC {
     color: #309c40;
+    hyphens: auto;
 }
 
 .spec-Living,
